--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
